# ecfformat

./: LICENCE  README  pyproject.toml  setup.cfg  setup.py
ecfformat/: __init__.py  ecfformat.py  ecfheader.py
ecfformat/core/: __init__.py  builder.py  configuration.py  constants.py  content.py  context.py  deleter.py  expectedfields.py  fields.py  header_inserter.py  inserter.py  parser.py  sequences.py  submission_inserter.py  table.py  taggedcontent.py
ecfformat/gui/: __init__.py  bindings.py  editor.py  header.py  help_.py  menus.py  method_makers.py  miscellaneous.py  submission.py
ecfformat/help_/: __init__.py  aboutformatter.txt  guide.txt  keyboard.txt
