[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[project]
name = "ecfformat"
version = "1.0.4.dev0"
authors = [
  { name="Roger Marsh", email="roger.marsh@solentware.co.uk" },
]
description = "Prepare ECF results submission files."
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Board Games",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
]
license = {file = "LICENCE"}
readme = "README"
dependencies = [
    "solentware-misc==1.7.dev0",
]

[project.urls]
Homepage = "http://www.solentware.co.uk"
Repository = "https://github.com/RogerMarsh/ecfformat.git"
"Bug Tracker" = "https://github.com/RogerMarsh/ecfformat/issues"

[tool.setuptools]
packages = [
    "ecfformat",
    "ecfformat.core",
    "ecfformat.gui",
    "ecfformat.help_",
]

[tool.setuptools.package-data]
ecfformat = ["help_/*.txt"]
