[metadata]
name = ecfformat
version = 1.0.3.dev0
description = Prepare ECF results submission files.
author = Roger Marsh
author_email = roger.marsh@solentware.co.uk
url = http://www.solentware.co.uk
long_description = file: README
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Board Games
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Development Status :: 3 - Alpha

[options]
packages =
    ecfformat
    ecfformat.core
    ecfformat.help_
    ecfformat.gui
install_requires =
    solentware-misc==1.6.dev0

[options.package_data]
ecfformat.help = *.txt
